# dotfiles

./: .chezmoiexternal.toml  .chezmoiignore  .chezmoiremove  .editorconfig  .gitignore  .gitmodules  .luacheckrc  .pre-commit-config.yaml  .stylua.toml  README  README.md  cleanup-omz.sh  dot_Brewfile-personal  dot_default-npm-packages  dot_editorconfig  dot_gitignore_global  dot_luacheckrc  dot_markdownlint.jsonc  dot_ruff.toml  dot_sourcery.yaml  dot_tmux.conf  dot_tmux.conf.tmpl  dot_wegorc  dot_wezterm.lua  private_dot_gitattributes_global  private_dot_gitconfig.tmpl  private_dot_gitignore_global  private_dot_p10k.zsh  private_dot_profile  private_dot_zprofile  private_dot_zprofile.tmpl  private_dot_zshenv  private_dot_zshenv.tmpl  private_dot_zshrc  private_dot_zshrc.tmpl  pyproject.toml  ruff.toml  selene.toml  vim.toml
.github/: Chezmoi_Code_Tags.md
.pre-commit/: README.md  pyproject.toml
Developer/Local/: executable_dump-version.sh  executable_upgrade-local.sh
Developer/kyleking/: mani.yaml
Developer/nightly-packages/: executable_dump-version.sh  executable_kmonad-install.sh  executable_upgrade-nightly-packages.sh  mani.yaml
Developer/roaminsight/: mani.yaml
docs/docs/: CODE_TAG_SUMMARY.md
dot_config/alacritty/: README.md  alacritty.yml
dot_config/bat/: config
dot_docker/: private_config.json
dot_kube/: kubie.yaml
private_Library/private_Application Support/pypoetry/: README.md  private_config.toml  private_config.toml.tmpl  pyproject.toml
private_dot_gnupg/: private_gpg-agent.conf  private_gpg.conf
private_dot_ssh/: config
(+177 files in other folders)
