[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dotfiles"
version = "0.0.1"
description = "Personal dotfiles"
# license = "MIT"
authors = ["Kyle King <KyleKing@users.noreply.github.com>"]
maintainers = []
repository = "https://github.com/KyleKing/dotfiles"

[tool.poetry.dependencies]
python = "^3.8"
pre-commit = ">=2.15"
