[tool.poetry]
authors = []
description = ""
license = ""
name = "poetry-instance"
package-mode = false
version = "1.8.3"

[tool.poetry.dependencies]
python = "3.12.6"
poetry = "1.8.3"

[tool.poetry.group.additional.dependencies]
cryptography = "^42.0.5"
idna = "^3.7"
poetry-plugin-export = "^1.8.0"
poetry-plugin-sort = "^0.2.1"
poetry-plugin-up = "^0.7.1"
poetry-relax = "^1.1.0"
setuptools = "^68.2.0"
urllib3 = "^2.2.1"
